--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -102,3 +102,7 @@ a {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.rechart-cs {
+  font-family: var(--font-buff) !important;
+}
